# summarization-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
docs/plans/: 2026-02-26-flan-t5-chunking-design.md  2026-02-26-flan-t5-chunking-plan.md  2026-03-06-news-article-summarizer-design.md  2026-03-06-news-article-summarizer.md  2026-03-06-ui-improvements-design.md  2026-03-06-ui-improvements.md  2026-04-06-mlx-migration.md
tests/: test_streamlit_app.py
