[project]
name = "summarization-pipeline"
version = "0.1.0"
description = "Streamlit web app for PDF-to-Markdown conversion and text summarization"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "ruff",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.12"
