[project]
name = "summarization-pipeline"
version = "0.1.0"
description = "Streamlit web app for PDF document conversion and text summarization"
requires-python = ">=3.12"
dependencies = [
    "docling",
    "streamlit",
    "torch",
    "transformers",
]

[dependency-groups]
dev = [
    "ty",
    "pytest",
    "ruff",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.12"
